console: fix table headers collapse issue

--- a/console/src/components/Common/Permissions/PermissionStyles.scss
+++ b/console/src/components/Common/Permissions/PermissionStyles.scss
@@ -73,6 +73,10 @@
 
   .permissionsLegendValue {
     margin-right: 15px;
+
+    svg {
+      margin-bottom: -2px;
+    }
   }
 }
 
