--- a/console/src/components/Common/TableCommon/Table.scss
+++ b/console/src/components/Common/TableCommon/Table.scss
@@ -35,8 +35,7 @@
   border-left: 1px solid #ddd;
 }
 
-.tableHeaderCell i {
-  font-size: 12px;
+.tableHeaderCell svg {
   position: absolute;
   top: calc(50% - 5px);
   right: 8px;
